Change the title name

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <header>
-        <h1>Sample Product Website</h1>
+        <h1>Sample Products</h1>
     </header>
     <nav>
         <a href="#">Home</a>
